<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.knightcube.samples.inventoryappproject.MainActivity">
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_done"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_order"
        android:title="@string/menu_order_item"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_item"
        app:showAsAction="never"
        android:title="@string/menu_delete_item"/>

    <item
        android:id="@+id/action_delete_all_data"
        android:title="@string/menu_delete_all_data"
        app:showAsAction="never"/>
</menu>
