<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.18"
                android:text="@string/product_name_title" />

            <EditText
                android:id="@+id/product_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/price_edit" />

            <TextView
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_title" />

            <EditText
                android:id="@+id/price_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="6" />

            <TextView
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrease_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/quantity_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="4" />

                <Button
                    android:id="@+id/increase_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"
                    android:textSize="24sp" />

            </LinearLayout>

            <TextView
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_name_title" />

            <EditText
                android:id="@+id/supplier_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name_hint"
                android:inputType="text" />

            <TextView
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_phone_title" />

            <EditText
                android:id="@+id/supplier_phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_phone_hint"
                android:inputType="phone" />

            <TextView
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_email_title" />

            <EditText
                android:id="@+id/supplier_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_address"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image" />

            <Button
                android:id="@+id/select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_image" />

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>